# llm-batch

./: .gitignore  pyproject.toml
examples/example1/: batch-requests.jsonl  batch-responses.jsonl  data-sample.csv  prompt-template.json
examples/example2/: prompt-template.json  train.xlsx
notebooks/: anthropic-batches.ipynb  batch-requests.jsonl  batch-responses.jsonl
notebooks/requests/claude-sonnet-4-20250514/: 1751508690.435168.json  1751508690.436118.json  1751508690.43664.json  1751508690.437082.json  1751508690.437712.json  1751508690.438264.json
src/llm_batch/: __init__.py  batch_anthropic.py  batch_gemini.py  batch_openai.py  cli.py
src/llm_batch/data/: config.yml
tests/: README.md  __init__.py  conftest.py  test_batch_anthropic.py  test_batch_gemini.py  test_batch_openai.py  test_cli.py  test_init.py  test_integration.py
